# NCTU_SDC_lecture

Final_competition/src/: Notice.md
Final_competition/src/argo_tracking/: CMakeLists.txt
Final_competition/src/argo_tracking/launch/: viz_track_result.launch  viz_track_result_hist.launch  viz_track_result_hist_py.launch  viz_track_result_test.launch  viz_track_result_val.launch
Final_competition/src/argo_tracking/rviz_config/: tracking_result_viz.rviz
Final_competition/src/argo_tracking/src/: processing_utils.py  publish_utils.py  viz_photo.py  viz_track_result.cpp  viz_track_result_hist.cpp  viz_track_result_test.cpp
HW2/: 310512025_hw2.docx  Markov_chain.py
HW3/: HW3.md  ekf_result_310512025.docx  ekf_template.yaml
HW4/: 310512025_hw4.docx  HW4.md
Mid_competition/: experiments.pptx
Mid_competition/Best/: README.md  submit_2.csv  submit_3.csv
Mid_competition/results/: icp_1_1.csv  icp_1_2.csv  icp_1_3.csv  icp_1_4.csv  icp_2_1.csv  icp_2_10_voxel_z.csv  icp_2_11_remove_car.csv  icp_2_11_remove_car_z=0.csv  icp_2_3_outlier.csv  icp_2_4.csv  icp_2_5.csv  icp_2_6.csv  icp_2_7.csv  icp_2_8.csv  icp_2_9_remove_floor.csv  icp_3_1.csv  icp_3_10.csv  icp_3_11_map_floor.csv  icp_3_12.csv  icp_3_13_dorientation.csv  icp_3_14.csv  icp_3_15_with_floor.csv  icp_3_16.csv  icp_3_17_remove_car.csv  icp_3_18.csv  icp_3_19.csv  icp_3_2.csv  icp_3_20.csv  icp_3_21.csv  icp_3_22.csv  icp_3_23.csv  icp_3_24.csv  icp_3_25.csv  icp_3_26_xyz_removeFar.csv  icp_3_27_xz_removeFar.csv  icp_3_28_ndt.csv  icp_3_3.csv  icp_3_4.csv  icp_3_5.csv  icp_3_6.csv  (+3 more)
(+48 files in other folders)
